# simple_desition_2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.infra.yml  docker-compose.monitoring.yml  docker-compose.yml  note.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1f931949afaa_add_index_and_uniq_check.py  ab373345d403_init_price_snapshot.py
monitoring/: loki-config.yaml  promtail-config.yaml
monitoring/grafana/provisioning/datasources/: loki.yaml
scripts/: load_test_data.py
src/share/core/: config.py  logger.py
src/share/database/: setup.py
src/share/database/models/: base.py  ticker_price_model.py
src/share/domain/: ticker_price_entity.py  ticker_value_object.py
src/share/mappers/: ticker_price_mapper.py
src/share/repository/: ticker_price_repository.py
src/web/: app.py  lifespan.py  middleware.py  setup.py
src/web/api/api_v1/: __init__.py  depends.py  routers.py  schemas.py
src/web/domain/: ticker_price_service.py
src/worker/: app.py  constants.py  lifespan.py  tasks.py
src/worker/clients/: base.py  deribit_client.py
src/worker/composition/: ticker_price_service_composition.py
src/worker/domain/: exceptions.py  ticker_price_service.py
src/worker/utiles/: async_loop_manager.py
tests/: conftest.py  constants.py
tests/data/: ticker_prices.jsonl
tests/e2e/: test_ticker_prices.py
