[project]
name = "simple-decition-04"
version = "0.1.0"
description = "Deribit crypto exchange price tracker with FastAPI and Celery"
authors = [
    {name = "Program430", email = "abdtimurrif@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    # Общие зависимости для обоих сервисов (share код)
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic-postgresql-enum (>=1.8.0,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
]

[project.optional-dependencies]
web = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "gunicorn (>=24.1.1,<25.0.0)",
]

celery = [
    "celery (>=5.6.2,<6.0.0)",
    "celery-types (>=0.24.0,<0.25.0)",
]

all = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "gunicorn (>=24.1.1,<25.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "celery-types (>=0.24.0,<0.25.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.14.14"
mypy = "^1.19.1"
testcontainers = "^4.14.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
